syntax = "proto3";
package ChatServer.Transmissions;

message ChatJoinRequest {
    bytes ChatIDBytes = 1;
}